tests/error/type_errors/if_expr_not_bool.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo(x: float) -> int:
6:        return 1 if x else 0
                      ^
GuppyTypeError: Expected expression of type `bool`, but got `x` of type `float`
